<resources>
    <string name="app_name">statrix</string>


    <string name="drawer_item_general_statistics">Общая статистика</string>
    <string name="drawer_item_everyday_statistics">Ежедневная статистика</string>
    <string name="drawer_item_administration">Администрирование</string>
    <string name="drawer_item_products">Продукты</string>
    <string name="drawer_item_help">Связаться с разаработчиками</string>
    <string name="toolbar_registration">Регистрация</string>
    <string name="toolbar_general_statistics">Общая статистика</string>
    <string name="toolbar_everyday_statistics">Ежедневная статистика</string>
    <string name="toolbar_admin">Администрирование</string>
    <string name="toolbar_buy_product">Продукты</string>
    <string name="toolbar_feedback">Обратная связь</string>
    <string name="reg_frgmnt_enter_name">Введите имя</string>
    <string name="reg_frgmnt_enter_email">Введите e-mail</string>
    <string name="reg_frgmnt_enter_pw">Введите пароль</string>
    <string name="reg_frgmnt_repeat_pw">Введите пароль повторно</string>
    <string name="reg_frgmnt_reg_confirm">Регистрация</string>
    <string name="reg_frgmnt_toolbar_title">Регистрация</string>

</resources>
